--- a/App/Templates/Home/home.tpl.html
+++ b/App/Templates/Home/home.tpl.html
@@ -1,4 +1,4 @@
-﻿<home-panel-one></home-panel-one>
-<home-panel-two></home-panel-two>
-<home-panel-three class="lazyload"></home-panel-three>
-<home-panel-four></home-panel-four>
+﻿<twwm-home-panel-one></twwm-home-panel-one>
+<twwm-home-panel-two></twwm-home-panel-two>
+<twwm-home-panel-three></twwm-home-panel-three>
+<twwm-home-panel-four></twwm-home-panel-four>
