--- a/Content/Styles/Sections/_blogPosts.scss
+++ b/Content/Styles/Sections/_blogPosts.scss
@@ -10,9 +10,12 @@
 
 .blogPost {
     background:white;
-    padding:2em;
+    padding: 3.5em 2.2em 4.5em;
     position:relative;
     box-shadow:0 0 5px rgba(0,0,0,.25);
+    header {
+        margin: 0 0 30px;
+    }
     @media (max-width:$screen-sm-max) {
         img {
             margin:1em auto !important;
@@ -24,9 +27,11 @@
 }
 
 .blogPost-title {
-    font-size:15px;
-    margin-bottom:0;
-    color:$black;
+    font-size: 16px;
+    margin-bottom: 0.35em;
+    color: #372F39;
+    font-family: "roboto", sans-serif;
+    font-weight: 600;
 }
 
 .blogPost-tags {
@@ -41,6 +46,7 @@
     margin: -2px 0 0;
     display: block;
     font-weight:bold;
+    color: #372F39;
     span {
         font-weight:normal;
     }
@@ -54,8 +60,7 @@
 }
 
 .blogPost-content {
-    font-size: 14px;
-    line-height: 1.3;
+    font-size: 13px;
     margin: .75em 0 0;
     img[style*="float:left"] {
         margin:.5em 1em 1em 0;
