--- a/Content/Styles/Sections/_dateTimeModule.scss
+++ b/Content/Styles/Sections/_dateTimeModule.scss
@@ -21,8 +21,9 @@
 
 .dateTimeModule-details {
     clear: both;
-    padding: 0 16px;
+    padding: 0 16px 6px;
     position: relative;
     top: -9px;
+    line-height: 1.4em;
     font-size:18px;
 }
