--- a/Content/Styles/Sections/_rightSidebar.scss
+++ b/Content/Styles/Sections/_rightSidebar.scss
@@ -6,7 +6,7 @@
         max-width: 19.75%;
         position:fixed;
         overflow-y:hidden;
-        background:rgb(60,155,185);
+        background: rgba(255,255,255,0.20);
         min-height:99vh;
     }
 }
@@ -20,18 +20,16 @@
     font-weight: normal;
     font-size: 16px;
     padding: 15px 15px;
-    background:$blueDark;
+    background: #285E78;
+    margin: 0;
 }
 
 a.featuredPost-link {
     display:block;
     background:transparent;
     color:white;
-    border-bottom:1px solid rgb(83,163,192);
+    border-bottom: 1px solid rgba(255,255,255,0.3);
     transition:background-color .35s;
-    &:last-child {
-        border-color:transparent;
-    }
     &:hover,
     &:active,
     &:focus {
@@ -56,22 +54,25 @@ a.featuredPost-link {
     text-align: center;
     padding: 11px 5px;
     font-size: 12px;
-    font-weight: bold;
+    font-weight: 600;
     width: 80px;
     span {
         display:block;
-        font-size:27px;
+        font-size: 32px;
+        font-weight: 400;
+        margin: 8px 0;
     }
 }
 
 .featuredPost-title {
     width: calc(100% - 84px);
-    padding: 9px 5px;
+    padding: 9px 10px;
     font-size: 12px;
     line-height: 1.2;
     font-family:inherit;
+    font-weight:600;
 }
 
 .search-term {
-    color:$blue;
+    color: #95989A;
 }
