--- a/Content/Styles/main.css
+++ b/Content/Styles/main.css
@@ -1539,7 +1539,7 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   min-height: 100vh; }
-  body > div {
+  body > [ui-view] {
     min-height: calc(100vh - 4em);
     position: relative; }
   @media (min-width: 768px) {
@@ -1657,11 +1657,19 @@ body {
   font-family: "roboto", sans-serif; }
   @media (min-width: 768px) {
     body {
-      font-size: 16px; } }
+      -webkit-font-smoothing: antialiased; } }
 
 h1, h2, h3, h4, h5 {
   font-family: "filson-soft", sans-serif;
-  font-weight: 500; }
+  font-weight: 400;
+  line-height: 1.3em; }
+
+h1 {
+  font-size: 2em;
+  margin: 0 0 0.67em 0; }
+
+h2 {
+  margin: 0.67em 0; }
 
 a, a:visited, a:hover {
   color: #00829f;
@@ -1677,7 +1685,7 @@ b {
 .content {
   color: #747474; }
   .content p {
-    margin: 0 0 1em; }
+    margin: 0 0 1.3em; }
 
 @font-face {
   font-family: 'SA-UI-ELEMENTS';
@@ -2045,7 +2053,7 @@ b {
   left: 0;
   width: 100%;
   padding: 1.2em 0;
-  background: rgba(0, 20, 36, 0.53);
+  background: rgba(0, 20, 36, 0.63);
   z-index: 1000; }
   @media (min-width: 768px) {
     .header {
@@ -2118,7 +2126,7 @@ b {
   cursor: pointer; }
   @media (min-width: 768px) {
     .navbar-brand {
-      padding: 0 0 0 4.75em;
+      padding: 0 0 0 6.75em;
       text-align: left; } }
   .navbar-brand:hover, .navbar-brand:active, .navbar-brand:focus {
     text-decoration: none; }
@@ -2185,10 +2193,8 @@ b {
   margin-right: 0; }
 
 .nav li.active a {
-  border-color: white; }
-
-.nav li.active a {
-  font-weight: 500; }
+  border-color: white;
+  font-weight: 600; }
 
 .no-touch .nav li a:hover {
   border-color: white; }
@@ -2209,10 +2215,11 @@ b {
   position: relative;
   z-index: 20;
   font-family: "filson-soft", sans-serif;
-  font-weight: 100;
+  font-weight: 400;
   transition: border .35s;
   letter-spacing: 1px;
-  cursor: pointer; }
+  cursor: pointer;
+  font-size: 14px; }
 
 .nav:not(.navbar-icons) a {
   border-bottom: 1px solid transparent; }
@@ -2334,7 +2341,7 @@ b {
   -webkit-box-shadow: 0 0 0;
   -moz-box-shadow: 0 0 0;
   border-radius: 0;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: bold; }
   .search-input:focus {
     box-shadow: 0 0 0;
@@ -2360,8 +2367,8 @@ b {
     content: "\e9f4";
     line-height: 1;
     font-size: 16px;
-    color: rgba(42, 42, 42, 0.13);
-    transition: color .35s; }
+    transition: color .35s;
+    color: rgba(42, 42, 42, 0.6); }
   .search-submit:hover:before {
     color: black; }
 
@@ -2667,20 +2674,21 @@ b {
   color: #e6e6e6; }
 
 .popularSearches {
-  padding: 1.25em 0 0; }
+  padding: 1.5em 0; }
 
 .popularSearches-header {
   font-size: 14px; }
 
 .popularSearches-item {
-  position: relative; }
+  position: relative;
+  padding: 0 0 8px; }
   .popularSearches-item:after, .popularSearches-item:before {
     content: "";
     display: block;
     position: absolute;
-    left: 4px;
-    top: 8px;
-    height: 8px;
+    left: 0;
+    top: 6px;
+    height: 10px;
     width: 19px;
     transition: background-color .35s; }
   .popularSearches-item:after {
@@ -2688,37 +2696,39 @@ b {
     width: 6px;
     height: 6px;
     right: 181px;
-    top: 9px;
-    left: auto; }
+    top: 8px;
+    left: 16px; }
   .popularSearches-item:hover:after, .popularSearches-item:hover:before {
     background-color: #00829f; }
 
 .popularSearches-item a {
-  padding-left: 35px;
+  padding-left: 32px;
   display: block;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   transition: all .35s;
-  z-index: 20; }
+  z-index: 20;
+  cursor: pointer; }
   .popularSearches-item a:hover {
     text-decoration: none;
     color: #00829f; }
 
 .search-container .search {
   margin: 2.75em 0 0;
-  border-bottom: 1px solid #888;
-  padding: 0 0 .25em 1em; }
+  border-bottom: 1px solid #E0E0E0;
+  padding: 0 0 .25em 1.8em; }
 
 .search-container .search-term {
   font-weight: bold;
   font-style: italic; }
 
 .search-container .search-results {
-  padding: .25em 0 0 4.15em;
-  font-size: 12px; }
+  padding: .4em 0 0 4.5em;
+  font-size: 12px;
+  color: #95989A; }
 
 .popularSearches-container {
-  padding: 2.5em 0 0 1em; }
+  padding: 3.5em 0 0 3em; }
 
 .content + .rightSidebar {
   display: none; }
@@ -2729,7 +2739,7 @@ b {
       max-width: 19.75%;
       position: fixed;
       overflow-y: hidden;
-      background: #3c9bb9;
+      background: rgba(255, 255, 255, 0.2);
       min-height: 99vh; } }
 
 .featuredPost-container {
@@ -2740,16 +2750,15 @@ b {
   font-weight: normal;
   font-size: 16px;
   padding: 15px 15px;
-  background: #011d38; }
+  background: #285E78;
+  margin: 0; }
 
 a.featuredPost-link {
   display: block;
   background: transparent;
   color: white;
-  border-bottom: 1px solid #53a3c0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   transition: background-color .35s; }
-  a.featuredPost-link:last-child {
-    border-color: transparent; }
   a.featuredPost-link:hover, a.featuredPost-link:active, a.featuredPost-link:focus {
     color: white;
     text-decoration: none;
@@ -2767,21 +2776,24 @@ a.featuredPost-link {
   text-align: center;
   padding: 11px 5px;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 600;
   width: 80px; }
   .featuredPost-date span {
     display: block;
-    font-size: 27px; }
+    font-size: 32px;
+    font-weight: 400;
+    margin: 8px 0; }
 
 .featuredPost-title {
   width: calc(100% - 84px);
-  padding: 9px 5px;
+  padding: 9px 10px;
   font-size: 12px;
   line-height: 1.2;
-  font-family: inherit; }
+  font-family: inherit;
+  font-weight: 600; }
 
 .search-term {
-  color: #00829f; }
+  color: #95989A; }
 
 @media (min-width: 768px) {
   .leftSidebar + .content {
@@ -2792,9 +2804,11 @@ a.featuredPost-link {
 
 .blogPost, .event {
   background: white;
-  padding: 2em;
+  padding: 3.5em 2.2em 4.5em;
   position: relative;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.25); }
+  .blogPost header, .event header {
+    margin: 0 0 30px; }
   @media (max-width: 991px) {
     .blogPost img, .event img {
       margin: 1em auto !important;
@@ -2802,9 +2816,11 @@ a.featuredPost-link {
       float: none !important; } }
 
 .blogPost-title {
-  font-size: 15px;
-  margin-bottom: 0;
-  color: #111; }
+  font-size: 16px;
+  margin-bottom: 0.35em;
+  color: #372F39;
+  font-family: "roboto", sans-serif;
+  font-weight: 600; }
 
 .blogPost-tags {
   position: absolute;
@@ -2816,7 +2832,8 @@ a.featuredPost-link {
   font-size: 12px;
   margin: -2px 0 0;
   display: block;
-  font-weight: bold; }
+  font-weight: bold;
+  color: #372F39; }
   .blogPost-meta span {
     font-weight: normal; }
   .blogPost-meta .dn-icon-calendar {
@@ -2827,14 +2844,12 @@ a.featuredPost-link {
     margin-right: 5px; }
 
 .blogPost-content {
-  font-size: 14px;
-  line-height: 1.3;
+  font-size: 13px;
   margin: .75em 0 0; }
   .blogPost-content img[style*="float:left"] {
     margin: .5em 1em 1em 0; }
 
 .event {
-  padding: 0;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ededed+0,ffffff+100 */
   background: #ededed;
   /* Old browsers */
@@ -2860,7 +2875,7 @@ a.featuredPost-link {
 
 .event-photo {
   width: 150px;
-  margin: 0 .8em 0 0;
+  margin: 0 1.6em 0 0;
   overflow: hidden;
   float: left;
   padding-top: 34px; }
@@ -2878,7 +2893,7 @@ a.featuredPost-link {
 @media (min-width: 768px) {
   .event-details {
     width: calc(100% - 280px);
-    padding: 1em 0 0;
+    padding: 2em 0 0;
     display: flex; } }
 
 .event-meta {
@@ -2891,19 +2906,19 @@ a.featuredPost-link {
     .event-meta {
       margin: 15px 0 20px; } }
   .event-meta p {
-    margin: 0; }
+    margin: 0 0 5px; }
   .event-meta address {
     font-style: normal; }
 
 .event-title {
   margin: 0 0 10px;
   line-height: 1.2;
-  font-size: 15px;
-  color: #111; }
+  font-size: 16px;
+  color: #111;
+  font-weight: 600;
+  font-family: "roboto", sans-serif; }
 
 .event-content {
-  font-size: 14px;
-  line-height: 1.3;
   padding: 1em 0 0 .25em; }
   @media (min-width: 768px) {
     .event-content {
@@ -2929,7 +2944,8 @@ a.featuredPost-link {
   position: absolute;
   width: 150px; }
   .event-time span {
-    font-weight: bold; }
+    font-weight: bold;
+    color: #111; }
   @media (min-width: 768px) {
     .event-time {
       background: transparent;
@@ -2959,7 +2975,8 @@ a.featuredPost-link {
       display: block; } }
 
 .event-details {
-  width: calc(100% - 163px); }
+  width: calc(100% - 163px);
+  margin-bottom: 4em; }
 
 .event {
   display: flex;
@@ -2967,7 +2984,9 @@ a.featuredPost-link {
   justify-content: center; }
 
 .event-time {
-  left: 0; }
+  left: 0;
+  font-weight: 600;
+  color: #111; }
 
 .dateTimeModule {
   background-color: #2ea6c7;
@@ -2988,9 +3007,10 @@ a.featuredPost-link {
 
 .dateTimeModule-details {
   clear: both;
-  padding: 0 16px;
+  padding: 0 16px 6px;
   position: relative;
   top: -9px;
+  line-height: 1.4em;
   font-size: 18px; }
 
 body.home {
@@ -3007,7 +3027,8 @@ body.home {
       transition: opacity .35s; }
       body.home .header.fixed {
         opacity: 1;
-        top: 0; } }
+        top: 0;
+        height: 65px; } }
 
 .home-navigation {
   display: none; }
@@ -3031,7 +3052,8 @@ body.home {
     .home-container .nav li {
       margin: 0 1.5em; }
   .home-container .nav li a {
-    font-weight: 500; }
+    font-weight: 500;
+    font-size: 24px; }
   .home-container .nav-icon {
     display: none; }
 
@@ -3060,13 +3082,16 @@ body.home {
       .home-panelOne .dn-icon-arrow-down {
         display: block;
         color: white;
-        border: 1px solid white;
+        border: 2px solid #ffffff;
         border-radius: 50%;
-        padding: 1em;
+        padding: 26px;
         margin: 0 0 0 -.5em;
         position: absolute;
-        left: 50%;
-        bottom: 5em; } }
+        left: calc(50% - 40px);
+        bottom: 4em;
+        text-align: center;
+        font-size: 30px;
+        font-weight: 100; } }
   .home-panelOne:after {
     content: "";
     display: block;
@@ -3092,10 +3117,12 @@ body.home {
         transform: translate(0, -50%);
         -webkit-transform: translate(0, -50%);
         -moz-transform: translate(0, -50%); } }
+  .home-panelOne .home-container h1 {
+    margin-bottom: 1.5em; }
 
 .home-panelTwoSlider,
 .home-panelThreeSlider {
-  line-height: 1.4; }
+  line-height: 1.6; }
   @media (min-width: 768px) {
     .home-panelTwoSlider,
     .home-panelThreeSlider {
@@ -3125,29 +3152,29 @@ body.home {
   padding: 50px 25px; }
   @media (min-width: 768px) {
     .home-panelTwoSlider {
-      max-width: 515px;
+      max-width: 535px;
       width: 80%;
       height: 80vh;
       left: 60px;
       background: rgba(255, 255, 255, 0.35);
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
-      padding: 100px 50px; } }
+      padding: 90px 60px; } }
   .home-panelTwoSlider h1, .home-panelTwoSlider h2, .home-panelTwoSlider h3, .home-panelTwoSlider h4, .home-panelTwoSlider h5, .home-panelTwoSlider h6 {
     font-family: "filson-soft", sans-serif;
-    font-weight: 500;
-    line-height: 1.1;
-    margin: 0 0 20px; }
+    font-weight: 400;
+    line-height: 1.2;
+    margin: 0 0 28px; }
     @media (min-width: 768px) {
       .home-panelTwoSlider h1, .home-panelTwoSlider h2, .home-panelTwoSlider h3, .home-panelTwoSlider h4, .home-panelTwoSlider h5, .home-panelTwoSlider h6 {
         font-size: 44px; } }
   .home-panelTwoSlider p {
     font-size: 13px; }
   .home-panelTwoSlider .slick-dots {
-    margin: 3em 0 0; }
+    margin: 3.4em 0 0; }
     .home-panelTwoSlider .slick-dots li {
       background: none;
-      padding: 5px; }
+      padding: 5px 12px; }
     .home-panelTwoSlider .slick-dots li button {
       width: 15px;
       height: 15px;
@@ -3239,7 +3266,7 @@ body.home {
     .home-panelThreeSlider .slick-dots li:nth-child(4) button:after {
       content: "\e902"; }
   .home-panelThreeSlider h2 {
-    margin: 0 0 .5em; }
+    margin: 0 0 28px; }
     @media (min-width: 768px) {
       .home-panelThreeSlider h2 {
         font-size: 44px; } }
@@ -3288,7 +3315,7 @@ body.home {
     .home-panelFour .home-container {
       padding: 0;
       color: white;
-      top: 50%;
+      top: 45%;
       transform: translate(0, -50%);
       max-width: 640px; } }
   .home-panelFour .home-container h2 {
@@ -3329,21 +3356,22 @@ body.home {
   left: 0;
   bottom: 0;
   width: 100%;
-  min-height: 50%;
+  min-height: 65%;
   overflow: hidden;
-  background: rgba(1, 29, 56, 0.75);
+  background: #00829f;
+  background: linear-gradient(to bottom, #0088a7 0%, #146dad 100%);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   padding-bottom: 6em; }
 
 .page-content {
   max-width: 670px;
-  padding: 1em;
+  padding: 3.5em 0;
   margin: 0 auto; }
 
 .page-title {
-  background: rgba(1, 29, 56, 0.9);
-  padding: 1em .75em;
+  background: rgba(0, 0, 0, 0.18);
+  padding: 1.2em 0;
   margin: 0 auto;
   max-width: 670px;
   position: relative;
@@ -3358,7 +3386,7 @@ body.home {
     top: 0;
     width: 500%;
     height: 100%;
-    background: rgba(1, 29, 56, 0.9); }
+    background: rgba(0, 0, 0, 0.18); }
   .page-title:after {
     right: -500%;
     left: auto;
