--- a/App/Templates/Home/homePanelFour.tpl.html
+++ b/App/Templates/Home/homePanelFour.tpl.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="home-panelFour home-panel lazyload" style="background-image:url({{panelFour.thumbFacebookMetaTag}});">
+<div class="home-panelFour home-panel" ng-style="{'background-image': 'url(' + panelFour.thumbFacebookMetaTag + ')'}">
 	<div class="home-container">
 		<div class="home-content" ng-bind-html="panelFour.content | unsafe"></div>
 	</div>
