--- a/App/Templates/Home/homePanelOne.tpl.html
+++ b/App/Templates/Home/homePanelOne.tpl.html
@@ -1,9 +1,8 @@
-﻿<div class="home-panelOne home-panel" style="background-image:url({{panelOne.thumbFacebookMetaTag}});">
+﻿<div class="home-panelOne home-panel" ng-style="{'background-image': 'url(' + panelOne.thumbFacebookMetaTag + ')'}">
 	<div class="row home-container">
 		<div class="u-textCenter col-sm-12">
 			<img ng-src="../../../Content/Images/shield.png" class="home-logo" />
 			<h1><img alt="{{vm.title}}" ng-src="../../../Content/Images/logo.png" /></h1>
-
 			<navigation class="home-navigation"></navigation>
 		</div>
 	</div>
