--- a/App/Templates/Home/homePanelThree.tpl.html
+++ b/App/Templates/Home/homePanelThree.tpl.html
@@ -1,5 +1,5 @@
-﻿<div class="home-panelThree home-panel" style="background-image:url({{panelThree.thumbFacebookMetaTag}});">
+﻿<div class="home-panelThree home-panel" ng-style="{'background-image': 'url(' + panelThree.thumbFacebookMetaTag + ')'}">
 	<div class="home-panelThreeSlider">
-		<slick init-onload=true ng-if="panelThreeSlidesLoaded" fade="true" arrows=false dots=true ng-bind-html="panelThree.content | unsafe"></slick>
+		<slick init-onload=true ng-if="slidesLoaded" fade="true" arrows=false dots=true ng-bind-html="panelThree.content | unsafe"></slick>
 	</div>
 </div>
