--- a/Content/Styles/Common/_globals.scss
+++ b/Content/Styles/Common/_globals.scss
@@ -21,7 +21,7 @@ body {
     overflow-y:scroll;
     //height:100%;
     min-height:100vh;
-    > div {
+    > [ui-view] {
         min-height:calc(100vh - 4em);
         position:relative;
     }
