--- a/Content/Styles/Common/_typography.scss
+++ b/Content/Styles/Common/_typography.scss
@@ -3,12 +3,20 @@
 	font-family: $sans-serif;
 
     @media(min-width:$screen-sm-min){
-        font-size:16px;
+        -webkit-font-smoothing: antialiased;
     }
 }
 h1, h2, h3, h4, h5 {
 	font-family: $sans-serif-alt;
-    font-weight:500;
+    font-weight: 400;
+    line-height: 1.3em;
+}
+h1 {
+    font-size: 2em;
+    margin: 0 0 0.67em 0;
+}
+h2 {
+    margin: 0.67em 0;
 }
 a, a:visited, a:hover {
 	color: $blue;
@@ -21,6 +29,6 @@ b {
 .content {
     color:#747474;
     p {
-        margin:0 0 1em;
+        margin: 0 0 1.3em;
     }
 }
