--- a/Content/Styles/Sections/_events.scss
+++ b/Content/Styles/Sections/_events.scss
@@ -1,6 +1,5 @@
 ﻿.event {
     @extend .blogPost;
-    padding:0;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ededed+0,ffffff+100 */
 background: rgb(237,237,237); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(237,237,237,1) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
@@ -24,7 +23,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
 
 .event-photo {
     width:150px;
-    margin:0 .8em 0 0;
+    margin: 0 1.6em 0 0;
     overflow:hidden;
     float:left;
     padding-top:34px;
@@ -44,8 +43,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
 .event-details {
    
     @media (min-width:$screen-sm-min) {
-         width:calc(100% - 280px);
-        padding:1em 0 0;
+        width:calc(100% - 280px);
+        padding: 2em 0 0;
         display:flex;
     }
 }
@@ -60,7 +59,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
         margin:15px 0 20px;
     }
     p {
-        margin:0;
+        margin: 0 0 5px;
     }
     address {
         font-style:normal;
@@ -70,13 +69,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
 .event-title {
     margin:0 0 10px;
     line-height:1.2;
-    font-size:15px;
+    font-size:16px;
     color:$black;
+    font-weight: 600;
+    font-family: $sans-serif;
 }
 
 .event-content {
-    font-size: 14px;
-    line-height: 1.3;
     padding:1em 0 0 .25em;
     @media (min-width:$screen-sm-min) {
         padding:0;
@@ -108,6 +107,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
 
     span {
         font-weight:bold;
+        color:$black;
     }
 
     @media (min-width:$screen-sm-min) {
@@ -146,6 +146,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
 
 .event-details {
     width: calc(100% - 163px);
+    margin-bottom:4em;
 }
 
 .event {
@@ -156,4 +157,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', end
 
 .event-time {
     left: 0;
+    font-weight:600;
+    color:$black;
 }
