--- a/Content/Styles/Sections/_leftSidebar.scss
+++ b/Content/Styles/Sections/_leftSidebar.scss
@@ -31,7 +31,7 @@ $elements: 10;
 }
 
 .popularSearches {
-    padding:1.25em 0 0;
+    padding: 1.5em 0;
 }
 
 .popularSearches-header {
@@ -40,14 +40,15 @@ $elements: 10;
 
 .popularSearches-item {
     position:relative;
+    padding: 0 0 8px;
     &:after,
     &:before {
         content: "";
         display: block;
         position: absolute;
-        left: 4px;
-        top: 8px;
-        height: 8px;
+        left: 0;
+        top: 6px;
+        height: 10px;
         width: 19px;
         transition:background-color .35s;
     }
@@ -56,8 +57,8 @@ $elements: 10;
         width: 6px;
         height: 6px;
         right: 181px;
-        top: 9px;
-        left: auto;
+        top: 8px;
+        left: 16px;
     }
     &:hover {
         &:after,
@@ -68,12 +69,13 @@ $elements: 10;
 }
 
 .popularSearches-item a {
-    padding-left: 35px;
+    padding-left: 32px;
     display: block;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     transition:all .35s;
     z-index:20;
+    cursor:pointer;
     &:hover {
         text-decoration:none;
         color:$blue;
@@ -83,19 +85,20 @@ $elements: 10;
 .search-container {
     .search {
         margin:2.75em 0 0;
-        border-bottom: 1px solid #888;
-        padding:0 0 .25em 1em;
+        border-bottom: 1px solid #E0E0E0;
+        padding: 0 0 .25em 1.8em;
     }
     .search-term {
         font-weight:bold;
         font-style:italic;
     }
     .search-results {
-        padding: .25em 0 0 4.15em;
+        padding: .4em 0 0 4.5em;
         font-size: 12px;
+        color: #95989A;
     }
 }
 
 .popularSearches-container {
-    padding: 2.5em 0 0 1em;
+    padding: 3.5em 0 0 3em;
 }
