--- a/Content/Styles/Sections/_pages.scss
+++ b/Content/Styles/Sections/_pages.scss
@@ -24,9 +24,10 @@
     left:0;
     bottom:0;
     width:100%;
-    min-height:50%;
+    min-height:65%;
     overflow:hidden;
-    background:rgba(1, 29, 56, 0.75);
+    background: #00829f;
+    background: linear-gradient(to bottom, #0088a7 0%, #146dad 100%);
     backdrop-filter:blur(5px);
     -webkit-backdrop-filter:blur(5px);
     padding-bottom:6em;
@@ -34,13 +35,13 @@
 
 .page-content {
     max-width:670px;
-    padding:1em;
+    padding: 3.5em 0;
     margin:0 auto;
 }
 
 .page-title {
-    background:rgba($blueDark,.9);
-    padding:1em .75em;
+    background: rgba(0, 0, 0, 0.18);
+    padding: 1.2em 0;
     margin:0 auto;
     max-width:670px;
     position:relative;
@@ -56,7 +57,7 @@
         top:0;
         width:500%;
         height:100%;
-        background:rgba($blueDark, .9);
+        background: rgba(0, 0, 0, 0.18);
     }
     &:after {
         right: -500%;
